--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
 <header>
     <nav class="navbar bg-body-tertiary">
-        <img class="logo-nav" src="/assets/Logo Amazing Events.png">
+        <img class="logo-nav" src="./assets/Logo Amazing Events.png">
         <form class="container-nav">
             <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
             <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
