--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTACT | Amazing Events</title>
-    <link rel="shortcut icon" href="./assets/ae_favicon.ico" type="image/x-icon">
+    <title>Contact | Amazing Events</title>
+    <link rel="shortcut icon" href="./assets/icono.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/contact.css">
 </head>
-
 
 <header>
     <nav class="navbar bg-body-tertiary">
@@ -23,7 +22,7 @@
                     Events</button></a>
             <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
                     Events</button></a>
-            <a href=".#"><button type="button" class="btn btn-outline-secondary btn-nav">Contac</button></a>
+            <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Contac</button></a>
             <a href="./stats.html"><button type="button" class="btn btn-outline-secondary btn-nav">Stats</button></a>
         </form>
     </nav>
@@ -41,7 +40,7 @@
         </div>
 
         <div>
-            <a href="./index.html">
+            <a href="./upcoming_events.html">
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -50,7 +49,7 @@
         </div>
 
         <div>
-            <a href="./contact.html">
+            <a href="./stats.html">
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
