--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HOME | Amazing Events</title>
-  <link rel="shortcut icon" href="./assets/ae_favicon.ico" type="image/x-icon">
+  <title>Home | Amazing Events</title>
+  <link rel="shortcut icon" href="./assets/icono.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/styles.css">
@@ -18,7 +18,7 @@
   <nav class="navbar bg-body-tertiary">
     <img class="logo-nav" src="./assets/Logo Amazing Events.png">
     <form class="container-nav">
-      <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
+      <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
       <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
           Events</button></a>
       <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
@@ -35,7 +35,7 @@
       <img src="./assets/home.png" class="img">
     </div>
     <div>
-      <a href="./contact.html">
+      <a href="./stats.html">
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
           data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -43,7 +43,7 @@
       </a>
     </div>
     <div>
-      <a href="./contact.html">
+      <a href="./upcoming_events.html">
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
           data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -98,27 +98,27 @@
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="./assets/Cinema.jpg" class="card-img-top">
+      <img src="./assets/Costume_Party.jpg" class="card-img-top">
       <div class="card-body">
-        <h5 class="card-title">Cinema</h5>
+        <h5 class="card-title">Costume Party</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
           content.</p>
         <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="./assets/Cinema.jpg" class="card-img-top">
+      <img src="./assets/Food_Fair.jpg" class="card-img-top">
       <div class="card-body">
-        <h5 class="card-title">Cinema</h5>
+        <h5 class="card-title">Food Fair</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
           content.</p>
         <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
-      <img src="./assets/Cinema.jpg" class="card-img-top">
+      <img src="./assets/Marathon.jpg" class="card-img-top">
       <div class="card-body">
-        <h5 class="card-title">Cinema</h5>
+        <h5 class="card-title">Marathon</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
           content.</p>
         <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
