--- a/stats.html
+++ b/stats.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="stylesheet" href="./styles/contact.css">
+    <link rel="stylesheet" href="./styles/stats.css">
 </head>
 
 <header>
@@ -96,59 +96,80 @@
     </div> -->
 
 
-    <!---------------------------- CARTAS ---------------------------->
+    <table>
+        <thead>
+            <tr>
+                <td class="head-td" colspan="3">Events Statistics</td>
+            </tr>
+            <tr>
+                <td>Events with the highest percentage of attendance</td>
+                <td>Events with the lowest percentage of attendance</td>
+                <td>Event with larger Capacity</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+            </tr>
+            <thead>
+                <tr>
+                    <td class="head-td" colspan="3">Upcoming Events Statistic By Category</td>
+                </tr>
+                <tr>
+                    <td>Categories</td>
+                    <td>Revenues</td>
+                    <td>Percentage Of Attendance</td>
+                </tr>
+            </thead>
+            <tr>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+            </tr>
+            <tr>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+            </tr>
+            <thead>
+                <tr>
+                    <td class="head-td" colspan="3">Past Events Statistic By Category</td>
+                </tr>
+                <tr>
+                    <td>Categories</td>
+                    <td>Revenues</td>
+                    <td>Percentage Of Attendance</td>
+                </tr>
+            </thead>
+            <tr>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+            </tr>
+            <tr>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+                <td>&nbsp</td>
+            </tr>
+            
+        </tbody>
+    </table>
 
-    <!-- <div class="CARTAS">
-
-        <div class="card" style="width: 18rem;">
-            <img src="./assets/Cinema.jpg" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title">Cinema</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img src="./assets/Cinema.jpg" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title">Cinema</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img src="./assets/Cinema.jpg" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title">Cinema</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
-            </div>
-        </div>
 
 
-        <div class="card" style="width: 18rem;">
-            <img src="./assets/Cinema.jpg" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title">Cinema</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
-            </div>
-        </div>
-    </div> -->
+
+
+
+
+
+
+
 
     <!---------------------------- FORMULARIO ---------------------------->
 
-    <form form action="./show_data.html" method="get" class="container-form">
+    <!-- <form form action="./show_data.html" method="get" class="container-form">
         <fieldset class="div-form">
             <div class="mb-3">
                 <label class="label" for="name">Name: </label>
@@ -166,7 +187,7 @@
             <button type="submit" class="btn btn-outline-secondary btn-send">Send</button>
         </fieldset>
     </form>
-
+ -->
 
     <!---------------------------- FOOTER ---------------------------->
 
