--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                     Events</button></a>
             <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
                     Events</button></a>
-            <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Contac</button></a>
+            <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Contact</button></a>
             <a href="./stats.html"><button type="button" class="btn btn-outline-secondary btn-nav">Stats</button></a>
         </form>
     </nav>
