--- a/past_events.html
+++ b/past_events.html
@@ -21,7 +21,7 @@
                     Events</button></a>
             <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Past
                     Events</button></a>
-            <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contac</button></a>
+            <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contact</button></a>
             <a href="./stats.html"><button type="button" class="btn btn-outline-secondary btn-nav">Stats</button></a>
         </form>
     </nav>
