--- a/stats.html
+++ b/stats.html
@@ -22,7 +22,7 @@
                     Events</button></a>
             <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
                     Events</button></a>
-            <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contac</button></a>
+            <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contact</button></a>
             <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Stats</button></a>
         </form>
     </nav>
@@ -40,7 +40,7 @@
         </div>
 
         <div>
-            <a href="./index.html">
+            <a href="./contact.html">
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -49,7 +49,7 @@
         </div>
 
         <div>
-            <a href="./stats.html">
+            <a href="./index.html">
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -96,7 +96,9 @@
     </div> -->
 
 
-    <table>
+    <!---------------------------- TABLA ---------------------------->
+
+    <table class="bordered">
         <thead>
             <tr>
                 <td class="head-td" colspan="3">Events Statistics</td>
@@ -157,37 +159,6 @@
         </tbody>
     </table>
 
-
-
-
-
-
-
-
-
-
-
-    <!---------------------------- FORMULARIO ---------------------------->
-
-    <!-- <form form action="./show_data.html" method="get" class="container-form">
-        <fieldset class="div-form">
-            <div class="mb-3">
-                <label class="label" for="name">Name: </label>
-                <input class="input form-control" id="name" type="text" name="Name" placeholder="Name">
-            </div>
-            <div class="mb-3">
-                <label class="label" for="email">Email: </label>
-                <input class="input form-control" id="email" type="email" name="Email" placeholder="Email Here">
-            </div>
-            <div class="mb-3">
-                <label class="label" for="message">Message: </label>
-                <textarea class="input form-control" id="message" type="textarea" name="Message"
-                    placeholder="Message here"></textarea>
-            </div>
-            <button type="submit" class="btn btn-outline-secondary btn-send">Send</button>
-        </fieldset>
-    </form>
- -->
 
     <!---------------------------- FOOTER ---------------------------->
 
