--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -23,7 +23,7 @@
           Events</button></a>
       <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
           Events</button></a>
-      <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contac</button></a>
+      <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contact</button></a>
       <a href="./stats.html"><button type="button" class="btn btn-outline-secondary btn-nav">Stats</button></a>
     </form>
   </nav>
