--- a/past_events.html
+++ b/past_events.html
@@ -54,9 +54,9 @@
   <!---------------------------- FOOTER ---------------------------->
   <footer class="container-footer">
     <div class="div-img-footer">
-      <a href="https://www.facebook.com/"><img src="./assets/facebook.png" alt="facebook-img" class="img-footer"></a>
-      <a href="https://www.instagram.com/"><img src="./assets/instagram.png" alt="instagram-img" class="img-footer"></a>
-      <a href="https://web.whatsapp.com/"><img src="./assets/whatsapp.png" alt="wpp-img" class="img-footer"></a>
+      <a href="https://www.facebook.com/"><img src="./assets/face1.png" alt="facebook-img" class="img-footer"></a>
+      <a href="https://www.instagram.com/"><img src="./assets/insta1.png" alt="instagram-img" class="img-footer"></a>
+      <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
     </div>
   </footer>
 
