--- a/stats.html
+++ b/stats.html
@@ -22,7 +22,8 @@
                     Events</button></a>
             <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
                     Events</button></a>
-            <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contact</button></a>
+            <a href="./contact.html"><button type="button"
+                    class="btn btn-outline-secondary btn-nav">Contact</button></a>
             <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Stats</button></a>
         </form>
     </nav>
@@ -155,7 +156,7 @@
                 <td>&nbsp</td>
                 <td>&nbsp</td>
             </tr>
-            
+
         </tbody>
     </table>
 
@@ -164,11 +165,9 @@
 
     <footer class="container-footer">
         <div class="div-img-footer">
-            <a href="https://www.facebook.com/"><img src="./assets/facebook.png" alt="facebook-img"
-                    class="img-footer"></a>
-            <a href="https://www.instagram.com/"><img src="./assets/instagram.png" alt="instagram-img"
-                    class="img-footer"></a>
-            <a href="https://web.whatsapp.com/"><img src="./assets/whatsapp.png" alt="wpp-img" class="img-footer"></a>
+            <a href="https://www.facebook.com/"><img src="./assets/face1.png" alt="facebook-img" class="img-footer"></a>
+            <a href="https://www.instagram.com/"><img src="./assets/insta1.png" alt="instagram-img" class="img-footer"></a>
+            <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
         </div>
     </footer>
 
