Pag Past_Events

--- a/past_events.html
+++ b/past_events.html
@@ -13,6 +13,7 @@
 </head>
 
 <header>
+   <!---------------------------- NVBAR ---------------------------->
     <nav class="navbar bg-body-tertiary">
         <img class="logo-nav" src="./assets/Logo Amazing Events.png">
         <form class="container-nav">
@@ -26,9 +27,8 @@
         </form>
     </nav>
 </header>
-
 <body>
-      <!---------------------------- CAROUSEL ---------------------------->
+      <!---------------------------- CAROUSEL? ---------------------------->
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="./assets/past.png" class="img">
@@ -50,7 +50,81 @@
       </a>
     </div>
   </div>
+  
+  <!---------------------------- CHECKBOX ---------------------------->
+  <div class="border-fset">
+    <fieldset class="fset">
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        Category
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        Category
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        Category
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        Category
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        Category
+      </label>
+    </fieldset>
+  </div>
 
+  <!---------------------------- BUSCAR ---------------------------->
+  <div class="buscar">
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-secondary btn-nav my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+
+<!---------------------------- CARTAS ---------------------------->
+  <div class="CARTAS">
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/Cinema.jpg" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Cinema</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/Costume_Party.jpg" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Costume Party</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/Food_Fair.jpg" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Food Fair</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="./assets/Marathon.jpg" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">Marathon</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+        <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
+      </div>
+    </div>
+  </div>
+  
   <!---------------------------- FOOTER ---------------------------->
   <footer class="container-footer">
     <div class="div-img-footer">
