--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
-
 <header>  
   <!---------------------------- NVBAR ---------------------------->
   <nav class="navbar bg-body-tertiary">
@@ -29,7 +28,7 @@
   </nav>
 </header>
 <body>
-  <!---------------------------- CAROUSEL ---------------------------->
+  <!---------------------------- CAROUSEL? ---------------------------->
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="./assets/home.png" class="img">
