--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
-<header>  
+<header>
   <!---------------------------- NVBAR ---------------------------->
   <nav class="navbar bg-body-tertiary">
-    <img class="logo-nav" src="./assets/Logo Amazing Events.png">
+    <a href="#"><img class="logo-nav" src="./assets/Logo Amazing Events.png"></a><!-- LOGO LLEVA AL HOME -->
     <form class="container-nav">
       <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
       <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
@@ -27,6 +27,7 @@
     </form>
   </nav>
 </header>
+
 <body>
   <!---------------------------- CAROUSEL? ---------------------------->
   <div class="carousel-inner">
@@ -85,7 +86,7 @@
     </form>
   </div>
 
-<!---------------------------- CARTAS ---------------------------->
+  <!---------------------------- CARTAS ---------------------------->
   <div class="CARTAS">
     <div class="card" style="width: 18rem;">
       <img src="./assets/Cinema.jpg" class="card-img-top">
@@ -124,14 +125,14 @@
       </div>
     </div>
   </div>
-  
+
   <!---------------------------- FOOTER ---------------------------->
   <footer class="container-footer">
     <div class="div-img-footer">
       <a href="https://www.facebook.com/"><img src="./assets/face1.png" alt="facebook-img" class="img-footer"></a>
       <a href="https://www.instagram.com/"><img src="./assets/insta1.png" alt="instagram-img" class="img-footer"></a>
       <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
-    </div>
+    </div>    
   </footer>
 
 
