--- a/stats.html
+++ b/stats.html
@@ -15,7 +15,8 @@
 
 <header>
     <nav class="navbar bg-body-tertiary">
-        <img class="logo-nav" src="./assets/Logo Amazing Events.png">
+        <a href="./index.html"><img class="logo-nav"
+                src="./assets/Logo Amazing Events.png"></a><!-- LOGO LLEVA AL HOME -->
         <form class="container-nav">
             <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
             <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
@@ -29,12 +30,8 @@
     </nav>
 </header>
 
-
 <body>
-
     <!---------------------------- CAROUSEL ---------------------------->
-
-
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="./assets/stats.png" class="img">
@@ -59,46 +56,7 @@
         </div>
     </div>
 
-
-    <!---------------------------- CHECKBOX ---------------------------->
-
-    <!-- <div class="border-fset">
-        <fieldset class="fset">
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-        </fieldset>
-    </div> -->
-
-    <!---------------------------- buscar ---------------------------->
-
-    <!-- <div class="buscar">
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-secondary btn-nav my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div> -->
-
-
     <!---------------------------- TABLA ---------------------------->
-
     <table class="bordered">
         <thead>
             <tr>
@@ -160,13 +118,12 @@
         </tbody>
     </table>
 
-
     <!---------------------------- FOOTER ---------------------------->
-
     <footer class="container-footer">
         <div class="div-img-footer">
             <a href="https://www.facebook.com/"><img src="./assets/face1.png" alt="facebook-img" class="img-footer"></a>
-            <a href="https://www.instagram.com/"><img src="./assets/insta1.png" alt="instagram-img" class="img-footer"></a>
+            <a href="https://www.instagram.com/"><img src="./assets/insta1.png" alt="instagram-img"
+                    class="img-footer"></a>
             <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
         </div>
     </footer>
