--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,8 @@
 
 <header>
     <nav class="navbar bg-body-tertiary">
-        <img class="logo-nav" src="./assets/Logo Amazing Events.png">
+        <a href="./index.html"><img class="logo-nav"
+                src="./assets/Logo Amazing Events.png"></a><!-- LOGO LLEVA AL HOME -->
         <form class="container-nav">
             <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
             <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
@@ -28,12 +29,8 @@
     </nav>
 </header>
 
-
 <body>
-
     <!---------------------------- CAROUSEL ---------------------------->
-
-
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="./assets/contact.png" class="img">
@@ -58,96 +55,7 @@
         </div>
     </div>
 
-
-    <!---------------------------- CHECKBOX ---------------------------->
-
-    <!-- <div class="border-fset">
-        <fieldset class="fset">
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-            <label class="label">
-                <input class="input" type="checkbox" name="Position" id="category" value="Category">
-                Category
-            </label>
-        </fieldset>
-    </div> -->
-
-    <!---------------------------- buscar ---------------------------->
-
-    <!-- <div class="buscar">
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-secondary btn-nav my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div> -->
-
-
-    <!---------------------------- CARTAS ---------------------------->
-
-    <!-- <div class="CARTAS">
-
-        <div class="card" style="width: 18rem;">
-            <img src="./assets/Cinema.jpg" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title">Cinema</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img src="./assets/Cinema.jpg" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title">Cinema</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img src="./assets/Cinema.jpg" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title">Cinema</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
-            </div>
-        </div>
-
-
-        <div class="card" style="width: 18rem;">
-            <img src="./assets/Cinema.jpg" class="card-img-top">
-            <div class="card-body">
-                <h5 class="card-title">Cinema</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
-            </div>
-        </div>
-    </div> -->
-
     <!---------------------------- FORMULARIO ---------------------------->
-
     <form form action="./show_data.html" method="get" class="container-form">
         <fieldset class="div-form">
             <div class="mb-3">
@@ -167,17 +75,15 @@
         </fieldset>
     </form>
 
-
     <!---------------------------- FOOTER ---------------------------->
-
     <footer class="container-footer">
         <div class="div-img-footer">
             <a href="https://www.facebook.com/"><img src="./assets/face1.png" alt="facebook-img" class="img-footer"></a>
-            <a href="https://www.instagram.com/"><img src="./assets/insta1.png" alt="instagram-img" class="img-footer"></a>
+            <a href="https://www.instagram.com/"><img src="./assets/insta1.png" alt="instagram-img"
+                    class="img-footer"></a>
             <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
         </div>
     </footer>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
