--- a/past_events.html
+++ b/past_events.html
@@ -2,33 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Past Events | Amazing Events</title>
-    <link rel="shortcut icon" href="./assets/icono.ico" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Past Events | Amazing Events</title>
+  <link rel="shortcut icon" href="./assets/icono.ico" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <header>
-   <!---------------------------- NVBAR ---------------------------->
-    <nav class="navbar bg-body-tertiary">
-        <img class="logo-nav" src="./assets/Logo Amazing Events.png">
-        <form class="container-nav">
-            <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
-            <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
-                    Events</button></a>
-            <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Past
-                    Events</button></a>
-            <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contact</button></a>
-            <a href="./stats.html"><button type="button" class="btn btn-outline-secondary btn-nav">Stats</button></a>
-        </form>
-    </nav>
+  <!---------------------------- NVBAR ---------------------------->
+  <nav class="navbar bg-body-tertiary">
+    <a href="./index.html"><img class="logo-nav" src="./assets/Logo Amazing Events.png"></a><!-- LOGO LLEVA AL HOME -->
+    <form class="container-nav">
+      <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
+      <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
+          Events</button></a>
+      <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Past
+          Events</button></a>
+      <a href="./contact.html"><button type="button" class="btn btn-outline-secondary btn-nav">Contact</button></a>
+      <a href="./stats.html"><button type="button" class="btn btn-outline-secondary btn-nav">Stats</button></a>
+    </form>
+  </nav>
 </header>
+
 <body>
-      <!---------------------------- CAROUSEL? ---------------------------->
+  <!---------------------------- CAROUSEL? ---------------------------->
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="./assets/past.png" class="img">
@@ -50,7 +51,7 @@
       </a>
     </div>
   </div>
-  
+
   <!---------------------------- CHECKBOX ---------------------------->
   <div class="border-fset">
     <fieldset class="fset">
@@ -85,7 +86,7 @@
     </form>
   </div>
 
-<!---------------------------- CARTAS ---------------------------->
+  <!---------------------------- CARTAS ---------------------------->
   <div class="CARTAS">
     <div class="card" style="width: 18rem;">
       <img src="./assets/Cinema.jpg" class="card-img-top">
@@ -124,7 +125,7 @@
       </div>
     </div>
   </div>
-  
+
   <!---------------------------- FOOTER ---------------------------->
   <footer class="container-footer">
     <div class="div-img-footer">
@@ -139,4 +140,5 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
