--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -16,7 +16,7 @@
 <header>
   <!---------------------------- NVBAR ---------------------------->
   <nav class="navbar bg-body-tertiary">
-    <img class="logo-nav" src="./assets/Logo Amazing Events.png">
+    <a href="./index.html"><img class="logo-nav" src="./assets/Logo Amazing Events.png"></a><!-- LOGO LLEVA AL HOME -->
     <form class="container-nav">
       <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
       <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Upcoming
@@ -135,7 +135,6 @@
       <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
     </div>
   </footer>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
