--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,12 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/contact.css">
+    <link rel="stylesheet" href="./styles/media_query.css">
 </head>
 
 <header>
     <nav class="navbar bg-body-tertiary">
-        <a href="./index.html"><img class="logo-nav"
+        <a href="./index.html" class="primerLogo"><img class="logo-nav"
                 src="./assets/Logo Amazing Events.png"></a><!-- LOGO LLEVA AL HOME -->
         <form class="container-nav">
             <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
