--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./styles/media_query.css">
 </head>
 
 <header>
   <!---------------------------- NVBAR ---------------------------->
   <nav class="navbar bg-body-tertiary">
-    <a href="#"><img class="logo-nav" src="./assets/Logo Amazing Events.png"></a><!-- LOGO LLEVA AL HOME -->
+    <a href="#" class="primerLogo"><img class="logo-nav" src="./assets/Logo Amazing Events.png"></a><!-- LOGO LLEVA AL HOME -->
     <form class="container-nav">
       <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
       <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
