--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -16,7 +16,7 @@
 <header>
   <!---------------------------- NVBAR ---------------------------->
   <nav class="navbar bg-body-tertiary">
-    <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo Amazing Events.png"></a><!-- LOGO LLEVA AL HOME -->
+    <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"  alt="img"></a><!-- LOGO LLEVA AL HOME -->
     <form class="container-nav">
       <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
       <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Upcoming
