--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,15 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/contact.css">
     <link rel="stylesheet" href="./styles/media_query.css">
+
+
+    <script src="https://kit.fontawesome.com/cee4e31326.js" crossorigin="anonymous"></script>
 </head>
 
 <header>
     <nav class="navbar bg-body-tertiary">
-        <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png" alt="img"></a><!-- LOGO LLEVA AL HOME -->
+        <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
+                alt="img"></a><!-- LOGO LLEVA AL HOME -->
         <form class="container-nav">
             <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
             <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
@@ -85,6 +89,7 @@
         </div>
     </footer>
 
+    <!---------------------------- BOOTSTRAP ---------------------------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
