--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -11,12 +11,15 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="./styles/media_query.css">
+
+  <script src="https://kit.fontawesome.com/cee4e31326.js" crossorigin="anonymous"></script>
 </head>
 
 <header>
   <!---------------------------- NVBAR ---------------------------->
   <nav class="navbar bg-body-tertiary">
-    <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"  alt="img"></a><!-- LOGO LLEVA AL HOME -->
+    <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
+        alt="img"></a><!-- LOGO LLEVA AL HOME -->
     <form class="container-nav">
       <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
       <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Upcoming
@@ -87,8 +90,18 @@
     </form>
   </div>
 
+
+
+  <!---------------------------- JS GALERIA ---------------------------->
+  <div class="container-fluid  galeria " id="galeria"></div>
+
+
+
+
+
+
   <!---------------------------- CARTAS ---------------------------->
-  <div class="CARTAS">
+  <!-- <div class="CARTAS">
     <div class="card" style="width: 18rem;">
       <img src="./assets/Cinema.jpg" class="card-img-top">
       <div class="card-body">
@@ -125,7 +138,7 @@
         <a href="#" class="btn btn-outline-secondary btn-card">See more</a>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!---------------------------- FOOTER ---------------------------->
   <footer class="container-footer">
@@ -136,9 +149,15 @@
     </div>
   </footer>
 
+  <!---------------------------- BOOTSTRAP ---------------------------->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+
+
+  <!---------------------------- LINK JS ---------------------------->
+  <script src="./js/amazing_events.js"></script>
+  <script src="./js/upcoming_events.js"></script>
 </body>
 
 </html>
