intentanto mil formas diferentes de poner un boton hacia arriba: sale bien

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <header>
   <!---------------------------- NVBAR ---------------------------->
-  <nav class="navbar bg-body-tertiary">
+  <nav class="navbar bg-body-tertiary" id="principio">
     <a href="#" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
         alt="img"></a><!-- LOGO LLEVA AL HOME -->
     <form class="container-nav">
@@ -98,6 +98,13 @@
   <div class="container-fluid  galeria " id="galeria"></div>
 
 
+  <!---------------------------- BOTON ARRIBA ---------------------------->
+ <!--Boton de ir hacia arriba-->
+ <div id="button-up">
+  <i class="fas fa-chevron-up"></i>
+</div>
+
+
   <!---------------------------- FOOTER ---------------------------->
   <footer class="container-footer">
     <div class="div-img-footer">
@@ -114,8 +121,11 @@
 
 
   <!---------------------------- LINK JS ---------------------------->
+  
   <script src="./js/amazing_events.js"></script>
   <script src="./js/main.js"></script>
+  <script src="./js/boton_arriba.js"></script>
+
 </body>
 
 </html>
