--- a/past_events.html
+++ b/past_events.html
@@ -90,10 +90,13 @@
     </form>
   </div>
 
-
   <!---------------------------- JS GALERIA ---------------------------->
   <div class="container-fluid  galeria pastages " id="galeria"></div>
 
+  <!---------------------------- BOTON ARRIBA ---------------------------->
+  <div id="button-up">
+    <i class="fas fa-chevron-up"></i>
+  </div>
 
   <!---------------------------- FOOTER ---------------------------->
   <footer class="container-footer">
@@ -112,6 +115,7 @@
   <!---------------------------- LINK JS ---------------------------->
   <script src="./js/amazing_events.js"></script>
   <script src="./js/past_events.js"></script>
+  <script src="./js/boton_arriba.js"></script>
 </body>
 
 </html>
