--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -94,6 +94,11 @@
   <div class="container-fluid  galeria " id="galeria"></div>
 
 
+  <!---------------------------- BOTON ARRIBA ---------------------------->
+  <div id="button-up">
+    <i class="fas fa-chevron-up"></i>
+  </div>
+
   <!---------------------------- FOOTER ---------------------------->
   <footer class="container-footer">
     <div class="div-img-footer">
@@ -112,6 +117,7 @@
   <!---------------------------- LINK JS ---------------------------->
   <script src="./js/amazing_events.js"></script>
   <script src="./js/upcoming_events.js"></script>
+  <script src="./js/boton_arriba.js"></script>
 </body>
 
 </html>
