Modificando los nombres de las categoría

--- a/index.html
+++ b/index.html
@@ -62,23 +62,31 @@
     <fieldset class="fset">
       <label class="label">
         <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
+        Food
       </label>
       <label class="label">
         <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
+        Museum
       </label>
       <label class="label">
         <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
+        Concert
       </label>
       <label class="label">
         <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
+        Race
       </label>
       <label class="label">
         <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
+        Books
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        Cinema
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        Party
       </label>
     </fieldset>
   </div>
