--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -56,31 +56,39 @@
     </div>
   </div>
 
-  <!---------------------------- CHECKBOX ---------------------------->
-  <div class="border-fset">
-    <fieldset class="fset">
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
-        Category
-      </label>
-    </fieldset>
-  </div>
+ <!---------------------------- CHECKBOX ---------------------------->
+ <div class="border-fset">
+  <fieldset class="fset">
+    <label class="label">
+      <input class="input" type="checkbox" name="Position" id="category" value="Category">
+      Food
+    </label>
+    <label class="label">
+      <input class="input" type="checkbox" name="Position" id="category" value="Category">
+      Museum
+    </label>
+    <label class="label">
+      <input class="input" type="checkbox" name="Position" id="category" value="Category">
+      Concert
+    </label>
+    <label class="label">
+      <input class="input" type="checkbox" name="Position" id="category" value="Category">
+      Race
+    </label>
+    <label class="label">
+      <input class="input" type="checkbox" name="Position" id="category" value="Category">
+      Books
+    </label>
+    <label class="label">
+      <input class="input" type="checkbox" name="Position" id="category" value="Category">
+      Cinema
+    </label>
+    <label class="label">
+      <input class="input" type="checkbox" name="Position" id="category" value="Category">
+      Party
+    </label>
+  </fieldset>
+</div>
 
   <!---------------------------- BUSCAR ---------------------------->
   <div class="buscar">
