--- a/index.html
+++ b/index.html
@@ -61,31 +61,31 @@
   <div class="border-fset">
     <fieldset class="fset">
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        <input class="input" type="checkbox" name="Position" id="checkbox-food" value="Food" onchange="filter(this)">
         Food
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        <input class="input" type="checkbox" name="Position" id="checkbox-museum" value="Museum" onchange="filter(this)">
         Museum
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        <input class="input" type="checkbox" name="Position" id="checkbox-concert" value="Concert" onchange="filter(this)">
         Concert
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        <input class="input" type="checkbox" name="Position" id="checkbox-race" value="Race" onchange="filter(this)">
         Race
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        <input class="input" type="checkbox" name="Position" id="checkbox-books" value="Books" onchange="filter(this)">
         Books
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        <input class="input" type="checkbox" name="Position" id="checkbox-cinema" value="Cinema" onchange="filter(this)">
         Cinema
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="category" value="Category">
+        <input class="input" type="checkbox" name="Position" id="checkbox-party" value="Party" onchange="filter(this)">
         Party
       </label>
     </fieldset>
@@ -124,11 +124,9 @@
 
 
   <!---------------------------- LINK JS ---------------------------->
-
   <script src="./js/amazing_events.js"></script>
   <script src="./js/main.js"></script>
   <script src="./js/boton_arriba.js"></script>
 
 </body>
-
 </html>
