--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -56,39 +56,40 @@
     </div>
   </div>
 
- <!---------------------------- CHECKBOX ---------------------------->
- <div class="border-fset">
-  <fieldset class="fset">
-    <label class="label">
-      <input class="input" type="checkbox" name="Position" id="category" value="Category">
-      Food
-    </label>
-    <label class="label">
-      <input class="input" type="checkbox" name="Position" id="category" value="Category">
-      Museum
-    </label>
-    <label class="label">
-      <input class="input" type="checkbox" name="Position" id="category" value="Category">
-      Concert
-    </label>
-    <label class="label">
-      <input class="input" type="checkbox" name="Position" id="category" value="Category">
-      Race
-    </label>
-    <label class="label">
-      <input class="input" type="checkbox" name="Position" id="category" value="Category">
-      Books
-    </label>
-    <label class="label">
-      <input class="input" type="checkbox" name="Position" id="category" value="Category">
-      Cinema
-    </label>
-    <label class="label">
-      <input class="input" type="checkbox" name="Position" id="category" value="Category">
-      Party
-    </label>
-  </fieldset>
-</div>
+  <!---------------------------- CHECKBOX ---------------------------->
+  <div class="border-fset">
+    <fieldset class="fset">
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="checkbox-food" value="Food" onchange="filter(this)">
+        Food
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="checkbox-museum" value="Museum" onchange="filter(this)">
+        Museum
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="checkbox-concert" value="Concert" onchange="filter(this)">
+        Concert
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="checkbox-race" value="Race" onchange="filter(this)">
+        Race
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="checkbox-books" value="Books" onchange="filter(this)">
+        Books
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="checkbox-cinema" value="Cinema" onchange="filter(this)">
+        Cinema
+      </label>
+      <label class="label">
+        <input class="input" type="checkbox" name="Position" id="checkbox-party" value="Party" onchange="filter(this)">
+        Party
+      </label>
+    </fieldset>
+  </div>
+
 
   <!---------------------------- BUSCAR ---------------------------->
   <div class="buscar">
