--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
   <script src="./js/amazing_events.js"></script>
   <script src="./js/main.js"></script>
   <script src="./js/boton_arriba.js"></script>
+  <script src="./js/filtrado_tarjetas.js"></script>
 
 </body>
 </html>
