--- a/past_events.html
+++ b/past_events.html
@@ -125,6 +125,7 @@
   <script src="./js/amazing_events.js"></script>
   <script src="./js/past_events.js"></script>
   <script src="./js/boton_arriba.js"></script>
+  <script src="./js/filtrado_tarjetas.js"></script>
 </body>
 
 </html>
