--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -60,31 +60,31 @@
   <div class="border-fset">
     <fieldset class="fset">
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-food" value="Food" onchange="filter(this)">
+        <input class="input" type="checkbox" name="Position" id="checkbox-food" value="Food" onchange="filter(this, filtradoFuturo)">
         Food
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-museum" value="Museum" onchange="filter(this)">
+        <input class="input" type="checkbox" name="Position" id="checkbox-museum" value="Museum" onchange="filter(this, filtradoFuturo)">
         Museum
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-concert" value="Concert" onchange="filter(this)">
+        <input class="input" type="checkbox" name="Position" id="checkbox-concert" value="Concert" onchange="filter(this, filtradoFuturo)">
         Concert
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-race" value="Race" onchange="filter(this)">
+        <input class="input" type="checkbox" name="Position" id="checkbox-race" value="Race" onchange="filter(this, filtradoFuturo)">
         Race
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-books" value="Books" onchange="filter(this)">
+        <input class="input" type="checkbox" name="Position" id="checkbox-books" value="Books" onchange="filter(this, filtradoFuturo)">
         Books
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-cinema" value="Cinema" onchange="filter(this)">
+        <input class="input" type="checkbox" name="Position" id="checkbox-cinema" value="Cinema" onchange="filter(this, filtradoFuturo)">
         Cinema
       </label>
       <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-party" value="Party" onchange="filter(this)">
+        <input class="input" type="checkbox" name="Position" id="checkbox-party" value="Party" onchange="filter(this, filtradoFuturo)">
         Party
       </label>
     </fieldset>
