hola no entiendo, ayuda gracias(?)
Tratando de hacer el js de details y el filtro del serch

--- a/index.html
+++ b/index.html
@@ -91,13 +91,60 @@
     </fieldset>
   </div>
 
+
+
+
   <!---------------------------- BUSCAR ---------------------------->
+ 
+
+ 
   <div class="buscar">
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <form class="form-inline my-2 my-lg-0" >
+      <input class="form-control mr-sm-2" type="search" placeholder="searcher" aria-label="Search">
       <button class="btn btn-outline-secondary btn-nav my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
+
+
+
+
+
+
+  <!-- <section>
+
+            <div class="col-md-5"> -->
+
+                <!--searcher-->
+                <!-- <form class="d-flex searcher-form" role="search">
+                    <input class="form-control me-2" type="search" id="searcher" placeholder="Search" aria-label="Search">
+                    <button class="btn" id="btnSearch" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+ -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <!---------------------------- JS GALERIA ---------------------------->
 
@@ -129,6 +176,7 @@
   <script src="./js/boton_arriba.js"></script>
   <script src="./js/filtrado_tarjetas.js"></script>
   <script src="./js/details.js"></script>
+  <script src="./js/filtro_barra.js"></script>
 
 </body>
 </html>
