--- a/details.html
+++ b/details.html
@@ -19,10 +19,10 @@
 <header>
     <!---------------------------- NVBAR ---------------------------->
     <nav class="navbar bg-body-tertiary" id="principio">
-        <a href="#" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
+        <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
                 alt="img"></a><!-- LOGO LLEVA AL HOME -->
         <form class="container-nav">
-            <a href="#"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
+            <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
             <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
                     Events</button></a>
             <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
@@ -35,7 +35,7 @@
 </header>
 
 <body>
-    <!---------------------------- CIERRO NVBAR ---------------------------->
+
 
     <!---------------------------- CAROUSEL? ---------------------------->
     <div class="carousel-inner">
@@ -59,22 +59,26 @@
             </a>
         </div>
     </div>
-    <!----------------------- CIERRO CAROUSEL? ------------------------>
+
 
     <!---------------------------- DETAILS ---------------------------->
 
 
+    <main>
+        <section>
+            <div class="container mt-5 mb-5 card-detail rounded p-4" id="divDetails"></div>
+        </section>
+    </main>
 
 
 
 
-    <!------------------------ CIERRO DETAILS ------------------------->
 
     <!---------------------------- BOTON ARRIBA ---------------------------->
     <div id="button-up">
         <i class="fas fa-chevron-up"></i>
     </div>
-    <!---------------------- CIERRO BOTON ARRIBA --------------------->
+
 
     <!---------------------------- FOOTER ---------------------------->
     <footer class="container-footer">
@@ -85,7 +89,7 @@
             <a href="https://web.whatsapp.com/"><img src="./assets/wpp1.png" alt="wpp-img" class="img-footer"></a>
         </div>
     </footer>
-    <!---------------------------- CIERRO FOOTER ---------------------------->
+
 
     <!---------------------------- BOOTSTRAP ---------------------------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -94,11 +98,11 @@
 
 
     <!---------------------------- LINK JS ---------------------------->
-    <script src="../js/details.js"></script>
-    <script src="../js/amazing_events.js"></script>
-    <script src="../js/main.js"></script>
-    <script src="../js/boton_arriba.js"></script>
-    <script src="../js/filtrado_tarjetas.js"></script>
+    <script src="./js/details.js"></script>
+    <script src="./js/amazing_events.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/boton_arriba.js"></script>
+    <script src="./js/filtrado_tarjetas.js"></script>
 
 
 </body>
