--- a/details.html
+++ b/details.html
@@ -98,11 +98,12 @@
 
 
     <!---------------------------- LINK JS ---------------------------->
-    <script src="./js/details.js"></script>
     <script src="./js/amazing_events.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/details.js"></script>
+  
+    <!-- <script src="./js/main.js"></script>
     <script src="./js/boton_arriba.js"></script>
-    <script src="./js/filtrado_tarjetas.js"></script>
+    <script src="./js/filtrado_tarjetas.js"></script> -->
 
 
 </body>
