Corrigiendo cosas del details
agregando boton "back"

--- a/details.html
+++ b/details.html
@@ -22,7 +22,7 @@
         <a href="./index.html" class="primerLogo"><img class="logo-nav" src="./assets/Logo_Amazing_Events.png"
                 alt="img"></a><!-- LOGO LLEVA AL HOME -->
         <form class="container-nav">
-            <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav2">Home</button></a>
+            <a href="./index.html"><button type="button" class="btn btn-outline-secondary btn-nav">Home</button></a>
             <a href="./upcoming_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Upcoming
                     Events</button></a>
             <a href="./past_events.html"><button type="button" class="btn btn-outline-secondary btn-nav">Past
@@ -42,7 +42,7 @@
         <div class="carousel-item active">
             <img src="./assets/details.png" class="img">
         </div>
-        <div>
+        <!-- <div>
             <a href="./stats.html">
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
@@ -57,7 +57,7 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 </button>
             </a>
-        </div>
+        </div> -->
     </div>
 
 
