aca haciendo las cositasss
con los pibeee

--- a/index.html
+++ b/index.html
@@ -58,40 +58,10 @@
   </div>
 
   <!---------------------------- CHECKBOX ---------------------------->
-  <div class="border-fset">
-    <fieldset class="fset">
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-food" value="Food" onchange="filter(this, agregoTarjetas)">
-        Food
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-museum" value="Museum" onchange="filter(this, agregoTarjetas)">
-        Museum
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-concert" value="Concert" onchange="filter(this, agregoTarjetas)">
-        Concert
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-race" value="Race" onchange="filter(this, agregoTarjetas)">
-        Race
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-books" value="Books" onchange="filter(this, agregoTarjetas)">
-        Books
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-cinema" value="Cinema" onchange="filter(this, agregoTarjetas)">
-        Cinema
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-party" value="Party" onchange="filter(this, agregoTarjetas)">
-        Party
-      </label>
-    </fieldset>
+
+ <div class="border-fset">
+    <fieldset class="fset" id="container-check"></fieldset>
   </div>
-
-
 
 
   <!---------------------------- BUSCAR ---------------------------->
@@ -100,7 +70,7 @@
  
   <div class="buscar">
     <form class="form-inline my-2 my-lg-0" >
-      <input class="form-control mr-sm-2" type="search" placeholder="searcher" aria-label="Search">
+      <input class="form-control mr-sm-2" type="search" placeholder="searcher" aria-label="Search" id="buscador">
       <button class="btn btn-outline-secondary btn-nav my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
@@ -110,7 +80,13 @@
 
   <!---------------------------- JS GALERIA ---------------------------->
 
+
+
+
   <div class="container-fluid  galeria " id="galeria"></div>
+
+
+
 
   <!---------------------------- BOTON ARRIBA ---------------------------->
   <div id="button-up">
@@ -134,10 +110,10 @@
 
   <!---------------------------- LINK JS ---------------------------->
   <script src="./js/amazing_events.js"></script>
-  <script src="./js/main.js"></script>
-  <script src="./js/boton_arriba.js"></script>
+  <!-- <script src="./js/main.js"></script> -->
+  <!-- <script src="./js/boton_arriba.js"></script> -->
   <script src="./js/filtrado_tarjetas.js"></script>
-  <script src="./js/details.js"></script>
+  <!-- <script src="./js/details.js"></script> -->
 
 
 </body>
