acomodando los html

--- a/index.html
+++ b/index.html
@@ -59,33 +59,26 @@
 
   <!---------------------------- CHECKBOX ---------------------------->
 
- <div class="border-fset">
+  <div class="border-fset">
     <fieldset class="fset" id="container-check"></fieldset>
   </div>
 
 
   <!---------------------------- BUSCAR ---------------------------->
- 
 
- 
+
   <div class="buscar">
-    <form class="form-inline my-2 my-lg-0" >
+    <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="searcher" aria-label="Search" id="buscador">
       <button class="btn btn-outline-secondary btn-nav my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
 
 
-  
-
   <!---------------------------- JS GALERIA ---------------------------->
 
 
-
-
   <div class="container-fluid  galeria " id="galeria"></div>
-
-
 
 
   <!---------------------------- BOTON ARRIBA ---------------------------->
@@ -110,11 +103,13 @@
 
   <!---------------------------- LINK JS ---------------------------->
   <script src="./js/amazing_events.js"></script>
-  <!-- <script src="./js/main.js"></script> -->
-  <!-- <script src="./js/boton_arriba.js"></script> -->
+
+  <script src="./js/boton_arriba.js"></script>
+
   <script src="./js/filtrado_tarjetas.js"></script>
-  <!-- <script src="./js/details.js"></script> -->
+
 
 
 </body>
+
 </html>
