--- a/past_events.html
+++ b/past_events.html
@@ -57,50 +57,28 @@
   </div>
 
   <!---------------------------- CHECKBOX ---------------------------->
+
   <div class="border-fset">
-    <fieldset class="fset">
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-food" value="Food" onchange="filter(this, filtradoPasado)">
-        Food
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-museum" value="Museum" onchange="filter(this, filtradoPasado)">
-        Museum
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-concert" value="Concert" onchange="filter(this, filtradoPasado)">
-        Concert
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-race" value="Race" onchange="filter(this, filtradoPasado)">
-        Race
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-books" value="Books" onchange="filter(this, filtradoPasado)">
-        Books
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-cinema" value="Cinema" onchange="filter(this, filtradoPasado)">
-        Cinema
-      </label>
-      <label class="label">
-        <input class="input" type="checkbox" name="Position" id="checkbox-party" value="Party" onchange="filter(this, filtradoPasado)">
-        Party
-      </label>
-    </fieldset>
+    <fieldset class="fset" id="container-check"></fieldset>
   </div>
 
 
   <!---------------------------- BUSCAR ---------------------------->
+
+
   <div class="buscar">
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <input class="form-control mr-sm-2" type="search" placeholder="searcher" aria-label="Search" id="buscador">
       <button class="btn btn-outline-secondary btn-nav my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
 
+
   <!---------------------------- JS GALERIA ---------------------------->
-  <div class="container-fluid  galeria pastages " id="galeria"></div>
+
+
+  <div class="container-fluid  galeria " id="galeria"></div>
+
 
   <!---------------------------- BOTON ARRIBA ---------------------------->
   <div id="button-up">
@@ -123,9 +101,13 @@
 
   <!---------------------------- LINK JS ---------------------------->
   <script src="./js/amazing_events.js"></script>
-  <script src="./js/past_events.js"></script>
-  <script src="./js/boton_arriba.js"></script>
+
+  <!-- <script src="./js/past_events.js"></script> -->
+
   <script src="./js/filtrado_tarjetas.js"></script>
+
+  <script src="./js/boton_arriba.js"></script>
+
 </body>
 
 </html>
