--- a/past_events.html
+++ b/past_events.html
@@ -102,9 +102,9 @@
   <!---------------------------- LINK JS ---------------------------->
   <script src="./js/amazing_events.js"></script>
 
-  <!-- <script src="./js/past_events.js"></script> -->
+  <script src="./js/past_events.js"></script>
 
-  <script src="./js/filtrado_tarjetas.js"></script>
+  <!-- <script src="./js/filtrado_tarjetas.js"></script> -->
 
   <script src="./js/boton_arriba.js"></script>
 
