--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -106,7 +106,7 @@
   
   <script src="./js/upcoming_events.js"></script>
 
-  <script src="./js/filtrado_tarjetas.js"></script>
+  <!-- <script src="./js/filtrado_tarjetas.js"></script> -->
   
   <script src="./js/boton_arriba.js"></script>
 </body>
